# SCoPE

./: README.md  pyproject.toml
notebooks/: dragnet_extraction_rerun.ipynb  dragnet_kaggle.ipynb  dragnet_largek.ipynb  dragnet_largek_vllm.ipynb  dragnet_micro.ipynb  scope_extraction_rerun.ipynb  scope_kaggle.ipynb
paper/: examples.md  first_results.md  prereg.md  results.md  selective.md  skeleton.md  theory.md
scripts/: _cells.py  build_examples.py  build_figures.py  build_results.py  modal_run.py  run_conformal_sets.py  run_decision_rule.py  run_extraction.py  run_family_structure.py  run_frontier_mscs.py  run_largek_probe.py  run_natural_cell.py  run_natural_mscs.py  run_natural_sets.py  run_orders.py  run_selective.py  run_selfcite.py  run_symmetry.py  score_micro.py  score_prereg.py  validate_designed.py
src/dragnet/: __init__.py  baselines.py  decide.py  designed.py  extract.py  game.py  interactions.py  model_game.py  mscs.py  prereg.py  responsibility.py  selective.py  spectrum.py  symmetry.py  testbed.py
src/scope/: conformal.py
tests/: test_baselines.py  test_conformal.py  test_decide.py  test_designed.py  test_extract.py  test_interactions.py  test_model_game.py  test_mscs.py  test_prereg.py  test_responsibility.py  test_selective.py  test_symmetry.py
